crates/aiken-project/src/blueprint/snapshots/aiken_project__blueprint__validator__tests__free_vars.snap
---
source: crates/aiken-project/src/blueprint/validator.rs
description: "Code:\n\nvalidator generics {\n  mint(redeemer: a, policy_id: ByteArray, transaction: Data) {\n    True\n  }\n}\n"
---
Schema {
    error: Error {
        context: FreeTypeVariable,
        breadcrumbs: [
            Var {
                tipo: RefCell {
                    value: Generic {
                        id: 77,
                    },
                },
                alias: None,
            },
        ],
    },
    location: 28..39,
    source_code: NamedSource {
        name: "",
        source: "<redacted>",
        language: None,
    ,
}
