crates/aiken-project/src/blueprint/snapshots/aiken_project__blueprint__validator__tests__list_2_tuples_as_list.snap
---
source: crates/aiken-project/src/blueprint/validator.rs
description: "Code:\n\npub type Dict<key, value> {\n    inner: List<(ByteArray, value)>\n}\n\npub type UUID { UUID }\n\nvalidator list_2_tuples_as_list {\n  mint(redeemer: Dict<UUID, Int>, policy_id: ByteArray, transaction: Data) {\n    True\n  }\n}\n"
---
{
  "title": "test_module.list_2_tuples_as_list.mint",
  "redeemer": {
    "title": "redeemer",
    "schema": {
      "$ref": "#/definitions/test_module~1Dict<test_module~1UUID,Int>"
    }
  },
  "compiledCode": "<redacted>",
  "hash": "<redacted>",
  "definitions": {
    "ByteArray": {
      "dataType": "bytes"
    },
    "Int": {
      "dataType": "integer"
    },
    "List<Tuple<<ByteArray,Int>>>": {
      "dataType": "list",
      "items": {
        "$ref": "#/definitions/Tuple<<ByteArray,Int>>"
      }
    },
    "Tuple<<ByteArray,Int>>": {
      "title": "Tuple",
      "dataType": "list",
      "items": [
        {
          "$ref": "#/definitions/ByteArray"
        },
        {
          "$ref": "#/definitions/Int"
        }
      ]
    },
    "test_module/Dict<test_module/UUID,Int>": {
      "title": "Dict",
      "anyOf": [
        {
          "title": "Dict",
          "dataType": "constructor",
          "index": 0,
          "fields": [
            {
              "title": "inner",
              "$ref": "#/definitions/List<Tuple<<ByteArray,Int>>>"
            }
          ]
        }
      ]
    }
  }
}
