crates/aiken-project/src/blueprint/snapshots/aiken_project__blueprint__validator__tests__mint_basic.snap
---
source: crates/aiken-project/src/blueprint/validator.rs
description: "Code:\n\nvalidator {\n  fn mint(redeemer: Data, ctx: Data) {\n    True\n  }\n}\n// "
---
{
  "title": "test_module.mint",
  "redeemer": {
    "title": "redeemer",
    "schema": {
      "$ref": "#/definitions/Data"
    }
  },
  "compiledCode": "5848010000323232232253330054a22930a9980324811856616c696461746f722072657475726e65642066616c7365001365600149010e72656465656d65723a2044617461005734ae71",
  "hash": "63eeae77b7b48133e4c35418edba10de206956b11f65afad7864c591",
  "definitions": {
    "Data": {
      "title": "Data",
      "description": "Any Plutus data."
    }
  }
}
