crates/aiken-project/src/blueprint/snapshots/aiken_project__blueprint__validator__tests__mint_parameterized.snap
---
source: crates/aiken-project/src/blueprint/validator.rs
description: "Code:\n\nvalidator(utxo_ref: Int) {\n  fn mint(redeemer: Data, ctx: Data) {\n    True\n  }\n}\n// "
---
{
  "title": "test_module.mint",
  "redeemer": {
    "title": "redeemer",
    "schema": {
      "$ref": "#/definitions/Data"
    }
  },
  "parameters": [
    {
      "title": "utxo_ref",
      "schema": {
        "$ref": "#/definitions/Int"
      }
    }
  ],
  "compiledCode": "584c010000323232232232253330074a22930a998042491856616c696461746f722072657475726e65642066616c73650013656001375a0029210e72656465656d65723a2044617461005734ae71",
  "hash": "7b683bc048abb79c1ad973d1df57d3de081e4aab001bdc6f9ebe1f48",
  "definitions": {
    "Data": {
      "title": "Data",
      "description": "Any Plutus data."
    },
    "Int": {
      "dataType": "integer"
    }
  }
}
