crates/aiken-project/src/blueprint/snapshots/aiken_project__blueprint__validator__tests__opaque_singleton_multi_variants.snap
---
source: crates/aiken-project/src/blueprint/validator.rs
description: "Code:\n\npub opaque type Rational {\n  numerator: Int,\n  denominator: Int,\n}\n\nvalidator {\n  fn opaque_singleton_multi_variants(redeemer: Rational, ctx: Void) {\n    True\n  }\n}\n"
---
Schema {
    error: Error {
        context: IllegalOpaqueType,
        breadcrumbs: [
            App {
                public: true,
                opaque: true,
                module: "test_module",
                name: "Rational",
                args: [],
                alias: None,
            },
        ],
    },
    location: 117..135,
    source_code: NamedSource {
        name: "",
        source: "<redacted>",
    ,
}
