crates/aiken-project/src/blueprint/snapshots/aiken_project__blueprint__validator__tests__pair_used_before_map.snap
---
source: crates/aiken-project/src/blueprint/validator.rs
description: "Code:\n\npub type MyPair =\n  Pair<Int, Int>\n\npub type MyDatum {\n  pair: MyPair,\n  pairs: List<MyPair>,\n}\n\nvalidator placeholder {\n  spend(_datum: Option<MyDatum>, _redeemer: Void, _utxo: Data, _self: Data,) {\n    True\n  }\n}\n"
---
{
  "title": "test_module.placeholder.spend",
  "datum": {
    "title": "_datum",
    "schema": {
      "$ref": "#/definitions/test_module~1MyDatum"
    }
  },
  "redeemer": {
    "title": "_redeemer",
    "schema": {
      "$ref": "#/definitions/Void"
    }
  },
  "compiledCode": "<redacted>",
  "hash": "<redacted>",
  "definitions": {
    "Int": {
      "dataType": "integer"
    },
    "List<test_module/MyPair>": {
      "dataType": "map",
      "keys": {
        "$ref": "#/definitions/Int"
      },
      "values": {
        "$ref": "#/definitions/Int"
      }
    },
    "Void": {
      "title": "Unit",
      "anyOf": [
        {
          "dataType": "constructor",
          "index": 0,
          "fields": []
        }
      ]
    },
    "test_module/MyDatum": {
      "title": "MyDatum",
      "anyOf": [
        {
          "title": "MyDatum",
          "dataType": "constructor",
          "index": 0,
          "fields": [
            {
              "title": "pair",
              "$ref": "#/definitions/test_module~1MyPair"
            },
            {
              "title": "pairs",
              "$ref": "#/definitions/List<test_module~1MyPair>"
            }
          ]
        }
      ]
    },
    "test_module/MyPair": {
      "title": "MyPair",
      "dataType": "list",
      "items": [
        {
          "$ref": "#/definitions/Int"
        },
        {
          "$ref": "#/definitions/Int"
        }
      ]
    }
  }
}
